--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,50 @@
     'wght' 500,
     'GRAD' 0,
     'opsz' 24;
-  }
+}
+
+#heart.material-symbols-outlined,
+#skip-next.material-symbols-outlined{
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 500,
+    'GRAD' 0,
+    'opsz' 24;
+}
+
+#skip-next.material-symbols-outlined {
+    font-size: 2.5rem;
+    line-height: 3rem;
+    text-align: center;
+    color: var(--claro);
+    background-color: var(--text);
+    width: 3rem;
+    height: 3rem;
+
+    border-radius: 50%;
+}
+
+#heart.material-symbols-outlined{
+    color: #e31b23;
+    font-size: 1.5rem;
+}
+
+#skip-next{
+    transition: visibility 0.2s ease-in-out,
+                all 0.4s ease-in-out;
+}
+
+#skip-next.material-symbols-outlined:hover{
+    cursor: pointer;
+    filter: brightness(90%);
+    transform: scale(1.05);
+}
+
+.invisible{
+    visibility: 0;
+
+    transition: visibility 0.2s ease-in-out;
+}
 
 *{
     transition: all 0.5s ease-in-out;
@@ -39,12 +82,18 @@ body{
     background-color: var(--principal);
     font-family: 'Nunito', sans-serif;
 
-    max-width: 100vw;
+    width: 100vw;
     overflow: hidden;
+
+    min-height: 100vh;
+
+    position: relative;
 }
 
 .borda{
     border-bottom: 1px solid var(--claro);
+
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .navbar-toggler{
@@ -91,6 +140,12 @@ a h1,
 #pomodoro .fundo{
     background-color: var(--claro);
     border-radius: 8px;
+
+    box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.25);
+}
+
+#time{
+    filter: drop-shadow(0px 2px 3px rgba(0, 0, 0, 0.25));
 }
 
 .fundo-btn{
@@ -103,13 +158,13 @@ a h1,
     border: 2px solid var(--claro);
 
     border-radius: 4px;
-
 }
 
 .fundo-btn.ativado{
     background: var(--escuro);
     border: 2px solid var(--escuro);
 
+    filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.25));
 }
 
 .fundo-btn:hover{
@@ -121,6 +176,8 @@ a h1,
     border: 2px solid var(--escuro);
 
     transition: all 0.3s ease-in-out;
+
+    filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.25));
 }
 
 .fundo-btn.start{
@@ -132,11 +189,15 @@ a h1,
     font-size: 1.5rem;
 
     border-radius: 1rem;
+
+    filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.25));
 }
 
 .fundo-btn.start:hover{
     filter: brightness(95%);
     background: #fff;
+
+    filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.25));
 }
 
 #cicle{
@@ -181,3 +242,22 @@ hr{
     line-height: 32px;
 }
 
+
+footer h3{
+    font-size: 1rem;
+    font-family: 'Nunito';
+    font-weight: bold;
+    color: var(--text);
+}
+
+footer{
+    bottom: 0;
+    left: 0;
+    width: 100%;
+
+    position: absolute;
+    height: 7vh;
+    border-top: 1px solid var(--claro);
+
+    box-shadow: 0px -2px 4px 0px rgba(0, 0, 0, 0.25);
+}
