--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     --claro: #F9A36D;
     --escuro: #DC5B09;
     --text: #FFFFFF;
+    --filter: invert(55%) sepia(25%) saturate(1980%) hue-rotate(341deg) brightness(98%) contrast(96%);
 
     transition: all 1s ease-in-out;
 }
@@ -14,6 +15,7 @@
     --claro: #336C33;
     --escuro: #214521;
     --text: #FFFFFF;
+    --filter: invert(25%) sepia(43%) saturate(567%) hue-rotate(71deg) brightness(101%) contrast(93%);
 }
 
 :root.descanso{
@@ -21,6 +23,7 @@
     --claro: #4185CF;
     --escuro: #23558B;
     --text: #FFFFFF;
+    --filter: invert(40%) sepia(11%) saturate(3780%) hue-rotate(172deg) brightness(90%) contrast(88%);
 }
 
 .material-symbols-outlined {
@@ -48,7 +51,7 @@
     background-color: var(--text);
     width: 3rem;
     height: 3rem;
-
+    visibility: 1;
     border-radius: 50%;
 }
 
@@ -58,8 +61,7 @@
 }
 
 #skip-next{
-    transition: visibility 0.2s ease-in-out,
-                all 0.4s ease-in-out;
+    transition: visibility 0.3s ease-in-out;
 }
 
 #skip-next.material-symbols-outlined:hover{
@@ -71,7 +73,7 @@
 .invisible{
     visibility: 0;
 
-    transition: visibility 0.2s ease-in-out;
+    transition: visibility 0.3s ease-in-out;
 }
 
 *{
@@ -83,11 +85,20 @@ body{
     font-family: 'Nunito', sans-serif;
 
     width: 100vw;
-    overflow: hidden;
 
     min-height: 100vh;
+    max-width: 100vw;
+
+    overflow-x: hidden;
 
     position: relative;
+}
+
+main{
+    min-height: 81vh;
+    width: 100%;
+
+    padding-bottom: 10vh;
 }
 
 .borda{
@@ -216,16 +227,16 @@ hr{
     background: var(--text);
 }
 
-#to-do h2{
+.tasks h2{
     color: #ffffff;
     font-size: 2rem;
 }
 
-#to-do span{
+.tasks span{
     transition: all 0.3s ease-in-out;
 }
 
-#to-do span:hover{
+.tasks span:hover{
     cursor: pointer;
     transform: scale(1.1);
     filter: brightness(90%);
@@ -240,6 +251,16 @@ hr{
     color: var(--principal);
     text-align: center;
     line-height: 32px;
+}
+
+.circle:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    filter: brightness(90%);
+}
+
+input[type='number']:invalid{
+    border: 1px solid #e31b23;
 }
 
 
@@ -261,3 +282,166 @@ footer{
 
     box-shadow: 0px -2px 4px 0px rgba(0, 0, 0, 0.25);
 }
+
+.task h4{
+    color: rgba(255, 255, 255, 0.75);
+    font-size: 1rem;
+}
+
+.task h3{
+    font-size: 1.25rem;
+}
+
+input[type="checkbox"]{
+    display: none;
+}
+
+.tasks label{
+    margin-left: 3rem;
+    position:relative;
+
+    transition: all 0.2s ease-in-out;
+
+    cursor: pointer;
+}
+
+.task h3{
+    position: relative;
+}
+
+.task h3:before{
+    content: "";
+    position: absolute;
+    width: 0%;
+    top: calc(50% - 2px);
+    left: -2.5%;
+
+    transition: all 0.3s ease-in-out;
+}
+
+
+.task h3:before{
+    height: 2px;
+    background-color: var(--text);
+}
+
+.tasks input[type="checkbox"]:checked + label h4:before{
+    width: 100%;
+    transition: all 0.3s ease-in-out;
+}
+
+.tasks input[type="checkbox"]:checked + label h3:before{
+    width: 100%;
+    transition: all 0.3s ease-in-out;
+}
+
+
+.tasks label:before{
+    content: "";
+    position: absolute;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    background-color: var(--text);
+
+    top: 0.5rem;
+    left: -2.5rem;
+
+    filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.25));
+    transition: all 0.3s ease-in-out;
+}
+
+.tasks label:hover:before{
+    transform: scale(1.1);
+    filter: brightness(0.85);
+}
+
+.tasks label:hover:after{
+    transform: scale(90%);
+    transition: all 0.3s ease-in-out;
+}
+
+.tasks label:after{
+    position: absolute;
+    top: 0;
+    left: -3rem;
+    content: url("done.svg");
+    filter: invert(74%) sepia(0%) saturate(1129%) hue-rotate(196deg) brightness(110%) contrast(92%);
+    transform: scale(75%);
+
+    transition: all 0.35s ease-in-out;
+}
+
+.tasks input[type="checkbox"]:checked + label:after{
+    filter: var(--filter);
+
+    transition: all 0.35s ease-in-out;
+}
+
+.bg-todo{
+    height: 50vh;
+    background-color: var(--claro);
+    border-radius: 0.5rem;
+    overflow-y: auto;
+}
+
+.tasks{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+}
+
+.task{
+    margin: 0.25rem 0.5rem;
+    padding: 0.5rem;
+    background-color: var(--escuro);
+    border-radius: 0.5rem;
+
+    color: var(--text);
+}
+
+@media (min-width: 576px) {}
+
+@media (min-width: 768px) {}
+
+@media (min-width: 992px) {
+    .material-symbols-outlined {
+        font-size: 20px;
+    }
+
+    .task h4{
+        font-size: 0.75rem;
+    }
+    
+    .task h3{
+        font-size: 1rem;
+    }
+
+    .circle{
+        width: 24px;
+        height:24px;
+        line-height: 24px;
+    }
+
+    .tasks label:before{
+        width: 1.5rem;
+        height: 1.5rem;
+
+        top: 0.35rem;
+        left: -2.5rem;
+    }
+
+    .tasks label:after{
+        top: -0.4rem;
+        left: -3.3rem;
+        content: url("done.svg");
+        transform: scale(60%);
+    }
+
+    .tasks label:hover:after{
+        transform: scale(80%);
+    }
+}
+
+@media (min-width: 1200px) {}
