--- a/styles.css
+++ b/styles.css
@@ -95,13 +95,15 @@ body{
 }
 
 main{
-    min-height: 81vh;
+    min-height: 93vh;
     width: 100%;
 
     padding-bottom: 10vh;
+    padding-top: 7vh;
 }
 
 .borda{
+    background-color: var(--principal);
     border-bottom: 1px solid var(--claro);
 
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
