--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,16 @@
 :root{
     --principal: #F67828;
     --claro: #F9A36D;
+    --mais-claro: #fdd9c3;
     --escuro: #DC5B09;
     --text: #FFFFFF;
     --filter: invert(55%) sepia(25%) saturate(1980%) hue-rotate(341deg) brightness(98%) contrast(96%);
-
-    transition: all 1s ease-in-out;
 }
 
 :root.pausa{
     --principal: #295629;
     --claro: #336C33;
+    --mais-claro: #408740;
     --escuro: #214521;
     --text: #FFFFFF;
     --filter: invert(25%) sepia(43%) saturate(567%) hue-rotate(71deg) brightness(101%) contrast(93%);
@@ -21,9 +21,23 @@
 :root.descanso{
     --principal: #2C6AAE;
     --claro: #4185CF;
+    --mais-claro: #81acdd;
     --escuro: #23558B;
     --text: #FFFFFF;
     --filter: invert(40%) sepia(11%) saturate(3780%) hue-rotate(172deg) brightness(90%) contrast(88%);
+}
+
+*::-webkit-scrollbar {
+    width: 0.75rem;
+    background-color: var(--principal);
+    transition: all 0.5s ease-in-out;
+    transition-delay: 0.5s;
+}
+  
+*::-webkit-scrollbar-thumb {
+    border-radius: 1.25rem;
+    background-color: var(--text);
+    transition: all 0.5s ease-in-out;
 }
 
 .material-symbols-outlined {
@@ -33,6 +47,57 @@
     'GRAD' 0,
     'opsz' 24;
 }
+
+.hamburguer{
+    width: 30px;
+    height: 2px;
+    background-color: var(--text);
+
+    position: relative;
+
+    margin-bottom: 25px;
+    transition: all 0.25s ease-in-out;
+}
+
+.hamburguer:before,
+.hamburguer:after{
+    content: "";
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
+    left: 0;
+
+    background-color: var(--text);
+
+    transition: top 0.25s 0.25s ease-in-out, transform 0.25s ease-in-out;
+}
+
+.hamburguer:before{
+    top: 10px;
+}
+
+.hamburguer:after{
+    top: 20px;
+}
+
+.hamburguer.change{
+    transform: rotate(45deg);
+    margin-bottom: 15px;
+    transition: all 0.25s 0.25s ease-in-out;
+}
+
+.hamburguer.change:before,
+.hamburguer.change:after{
+    top: 0;
+
+    transform: rotate(90deg);
+
+    
+    transition: top 0.25s ease-in-out, transform 0.25s 0.25s ease-in-out;
+}
+
+
 
 #heart.material-symbols-outlined,
 #skip-next.material-symbols-outlined{
@@ -115,6 +180,7 @@ main{
 
 li a {
     color: var(--text);
+    font-size: 1.1rem;
     position: relative;
 }
 
@@ -191,6 +257,13 @@ a h1,
     transition: all 0.3s ease-in-out;
 
     filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.25));
+}
+
+.modal-footer .fundo-btn:hover{
+    filter: brightness(90%);
+    transform: scale(1);
+
+    transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .fundo-btn.start{
@@ -403,46 +476,42 @@ input[type="checkbox"]{
     color: var(--text);
 }
 
+.modal-dialog-centered.modal-dialog-scrollable .modal-content{
+    background-color: var(--claro);
+    color: var(--text);
+    font-family: 'Nunito', sans-serif;
+}
+
+.modal-dialog-scrollable .modal-header{
+    border-bottom: 1px solid var(--mais-claro);
+}
+
+.modal-dialog-scrollable .modal-footer{
+    border-top: 1px solid var(--mais-claro);
+}
+
+#close{
+    color: var(--text);
+}
+
+#to-do input[type="text"],
+input[type="number"]{
+    width: 50%;
+    background-color: var(--text);
+    border: 1px solid var(--escuro);
+}
+
+#to-do input[type="number"]{
+    width: 25%;
+}
+
 @media (min-width: 576px) {}
 
 @media (min-width: 768px) {}
 
 @media (min-width: 992px) {
-    .material-symbols-outlined {
-        font-size: 20px;
-    }
-
-    .task h4{
-        font-size: 0.75rem;
-    }
-    
-    .task h3{
-        font-size: 1rem;
-    }
-
-    .circle{
-        width: 24px;
-        height:24px;
-        line-height: 24px;
-    }
-
-    .tasks label:before{
-        width: 1.5rem;
-        height: 1.5rem;
-
-        top: 0.35rem;
-        left: -2.5rem;
-    }
-
-    .tasks label:after{
-        top: -0.4rem;
-        left: -3.3rem;
-        content: url("done.svg");
-        transform: scale(60%);
-    }
-
-    .tasks label:hover:after{
-        transform: scale(80%);
+    footer h3{
+        font-size: 1.25rem;
     }
 }
 
